Dashboard update and Search Function

--- a/templates/student/studentgeneratepaper.html
+++ b/templates/student/studentgeneratepaper.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>Teacher Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -93,8 +93,8 @@
 
 <main class="h-[100vh] w-full bg-cover bg-center bg-no-repeat" >
     <div class="flex flex-col justify-start items-center pt-40 gap-5">
-        <h1 class="text-5xl font-medium text-white mt-22">Search Notes Below</h1>
-<!--        <h1 class="text-7xl font-medium text-white mt-12"></h1>-->
+        <h1 class="text-5xl font-medium text-white mt-22">Search Questions Below</h1>
+        <!--        <h1 class="text-7xl font-medium text-white mt-12"></h1>-->
     </div>
 
 
