--- a/templates/student/studentgeneratepaper.html
+++ b/templates/student/studentgeneratepaper.html
@@ -159,7 +159,7 @@
           const li = document.createElement('li');
             const button = document.createElement('button');
             button.onclick = function () {
-                window.open('/notes-display?pdf=' + uuid, '_blank')
+                window.open('/qp-display?pdf=' + uuid, '_blank')
             };
             button.textContent = note_name;
             button.classList.add('bg-gray-700', 'w-full' ,'p-2', 'border', 'rounded-md', 'mr-2', 'mb-2', 'focus:outline-none', 'focus:border-blue-500', 'transition', 'duration-150');
@@ -177,3 +177,6 @@
 </script>
 </body>
 </html>
+<div class="flex items-center mb-4">
+    <input id="default-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+</div>
