Teacher Dashboard Notes Catalogue

--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -24,7 +24,7 @@
 								<a href="#" class="icon solid fa-angle-down">Layouts</a>
 								<ul>
 									<li><a href={{ url_for('generic')}}>Generic</a></li>
-									<li><a href={{ url_for('contact')}}>Contact</a></li>
+									<li><a href={{ url_for('contact_page')}}>Contact</a></li>
 									<li><a href={{ url_for('elements')}}>Elements</a></li>
 									<li>
 										<a href="#">Submenu</a>
@@ -52,16 +52,16 @@
 						<form method="post" action="#">
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-6 col-12-mobilep">
-									<input type="text" name="name" id="name" value="" placeholder="Name" />
+									<input type="text" name="name" id="name" value="" autocomplete="off" placeholder="Name" />
 								</div>
 								<div class="col-6 col-12-mobilep">
-									<input type="email" name="email" id="email" value="" placeholder="Email" />
+									<input type="email" name="email" id="email" value="" autocomplete="off" placeholder="Email" />
 								</div>
 								<div class="col-12">
-									<input type="text" name="subject" id="subject" value="" placeholder="Subject" />
+									<input type="text" name="subject" id="subject" value="" autocomplete="off" placeholder="Subject" />
 								</div>
 								<div class="col-12">
-									<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+									<textarea name="message" id="message" autocomplete="off" placeholder="Enter your message" rows="6"></textarea>
 								</div>
 								<div class="col-12">
 									<ul class="actions special">
@@ -75,17 +75,14 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+<!--					<ul class="icons">-->
+<!--						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
+<!--						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+<!--						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
+<!--						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>-->
+<!--						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+<!--						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>-->
+<!--					</ul>-->
 				</footer>
 
 		</div>
