--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -18,7 +18,7 @@
 								<a href="#" class="icon solid fa-angle-down">Layouts</a>
 								<ul>
 									<li><a href="{{ url_for('generic') }}">About Us</a></li>
-									<li><a href="{{ url_for('contact') }}">Contact</a></li>
+									<li><a href="{{ url_for('contact_page') }}">Contact</a></li>
 									<li><a href="{{ url_for('elements') }}">Elements</a></li>
 									<li>
 										<a href="#">Submenu</a>
