--- a/templates/login_register/login.html
+++ b/templates/login_register/login.html
@@ -6,13 +6,24 @@
 <img src="../../static/images/logo.png" width="25%" height="15%" alt="logo" >
 <div class="container" id="container">
 
-	<div class="form-container sign-in-container">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="w-full bg-green-800 text-white p-3 rounded-md shadow-md mb-5 sm:max-w-md">
+
+        {% for message in messages %}
+        <p>{{ message }}</p>
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
+
+    <div class="form-container sign-in-container">
         <form action="{{ url_for('login') }}" method="POST" autocomplete="off">
-			{{form.hidden_tag()}}
-			<h1>Sign in</h1>
-			<br>
-				
-			<!-- <input type="email" placeholder="Email" />
+            {{form.hidden_tag()}}
+            <h1>Sign in</h1>
+            <br>
+
+            <!-- <input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" /> -->
             {{ form.email() }}
             {{ form.password() }}
